feat: Daily Big3 배치와 주간 작업 엔티티 분리
